# shrimp

./: .gitignore  LICENSE  README.md  dev-requirements.txt  devlog.md  fun.ipynb  proto_ps.ipynb  pyproject.toml  test.html  test.ipynb  test_basic.ipynb  test_begin.ipynb  test_music.ipynb  test_player.ipynb
.github/workflows/: deploy.yml
demos/: configuration.ipynb  recursion.ipynb
docs/: README.md  package-lock.json  quartz.config.ts  quartz.layout.ts
docs/content/: index.md
docs/content/about/: friends.md  index.md  support.md  whoami.md
docs/content/configuration/: configuration_file.md  configuration_tour.md  index.md  midi_configuration.md  osc_configuration.md  supercollider.md
docs/content/editors/: basic_repl.md  index.md  jupyter_notebook.md  text_editors.md
docs/content/get_started/: clock_tempo.md  first_objects.md  hello_world.md  index.md
docs/content/installation/: index.md  linux.md  macos.md  recommended_software.md  windows.md
docs/content/patterns/: LFOS.md  Modulos.md  Neuclid.md  Parr.md  Pbin.md  Pcc.md  Pcos.md  Pdur.md  Peuclid.md  Pgeom.md  Plin.md  Pmbar.md  Pmbeat.md  Pnote.md  Prand.md  index.md
docs/content/reference/: global_config.md  index.md
docs/content/showcase/: index.md  links.md
docs/quartz/: cfg.ts
docs/quartz/components/: Footer.tsx
docs/quartz/styles/: base.scss
examples/: hello_world.py  midi_notes.py
src/baston/: SynthDefs.py  __init__.py  __main__.py  clock.py  configuration.py  environment.py  errors.py  midi.py  thinking_about_patterns.ipynb  utils.py
src/baston/Synths/: Basic.py  Drum.py  Substractive.py  Utils.py  __init__.py
src/baston/io/: midi.py  osc.py
src/baston/systems/: PScale.py  Pattern.py  Player.py  PlayerLibrary copy.py  PlayerLibrary.py  Rest.py
src/baston/time/: clock.py
src/demos/: recursion.ipynb  small_tour.ipynb
src/shrimp/: __init__.py  __main__.py  configuration.py  environment.py  fun.ipynb  utils.py
src/shrimp/IO/: midi.py  osc.py
src/shrimp/Synths/: Basic.py  Debug.py  Drum.py  Substractive.py  Utils.py
src/shrimp/Time/: Clock.py  TimePos.py
src/shrimp/io/: midi.py  osc.py
src/shrimp/time/: clock.py
src/test/: test_carousel_pattern.py  test_clock.py  test_configuration.py  test_mini_notation.py
tutorials/: clock.ipynb  composition.ipynb  configuration.ipynb  introduction.ipynb  midi.ipynb  midi_instrument.ipynb  osc.ipynb  recursion.ipynb  small_tour.ipynb
(+71 files in other folders)
