[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Baston"
version = "0.0.1"
authors = [
  {name="Raphaël Forment", email="raphael.forment@gmail.com"},
]
description = "La baston sur scène"
readme = "README.md"
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "mido >= 1.3.0",
  "appdirs >= 1.4.4",
  "LinkPython-extern >= 1.0.0"
]


[project.urls]
Homepage = "https://github.com/Bubobubobubobubo/baston"
Issues = "https://github.com/Bubobubobubobubo/baston"
