[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Shrimp"
version = "0.0.1"
authors = [
  {name="Raphaël Forment", email="raphael.forment@gmail.com"},
]
description = "Live Coding with Python"
readme = "README.md"
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "mido >= 1.3.0",
  "pyfiglet >= 1.0.2",
  "appdirs >= 1.4.4",
  "LinkPython-extern >= 1.0.0",
  "rich >= 13.7.1",
  "ptpython >= 3.0.0",
  "osc4py3 >= 1.0.8",
  "python-rtmidi >= 1.5.8",
  'signalflow >= 0.4.8 ; platform_system != "Windows"'
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pylint."messages control"]
ignore = ["setup.py", "__init__.py"]
disable = "all"
enable = [
  "empty-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring"
]

[project.urls]
Homepage = "https://github.com/Bubobubobubobubo/shrimp"
Issues = "https://github.com/Bubobubobubobubo/shrimp"
